Closed Bug 1922916 Opened 27 days ago Closed 23 days ago

Scroll wheel does not scroll page content in recent nightly

Categories

(Core :: Widget: Gtk, defect, P1)

Firefox 133
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox131 --- unaffected
firefox132 --- unaffected
firefox133 + fixed

People

(Reporter: arash, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Steps to reproduce:

  1. Visit a web page with content larger than the window size.
  2. Use the scroll wheel to scroll the content

Actual results:

Nothing. The content did not scroll.

Expected results:

The page should have scrolled.

I tested against older nightly releases, and the bug first appears in the 2024-10-05 nightly. I also restarted in troubleshooting mode and the problem remained.

OS: Ubuntu 22.04

Probably relevant. I'm using Wayland.

probably bug 1836886

Component: Untriaged → Widget: Gtk
Keywords: regression
OS: Unspecified → Linux
Product: Firefox → Core
Regressed by: 1836886
Hardware: Unspecified → x86_64

:stransky, since you are the author of the regressor, bug 1836886, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)
Status: UNCONFIRMED → NEW
Ever confirmed: true

Please attach your about:support page. On which page you see the bug?
Thanks.

Flags: needinfo?(stransky) → needinfo?(arash)
Blocks: wayland
Priority: -- → P1
Attached file about:support

I can reproduce the issue on nightly133.0a1 ubuntu22.04.

STR:

  1. Open any page.
    e.g., https://ftp.mozilla.org/pub/firefox/nightly/2024/10/2024-10-06-21-52-00-mozilla-central/
  2. Try to scroll with mouse wheel

Workaround:
Disable wayland.
i.e., set the following environment variable then start nightly.
export MOZ_ENABLE_WAYLAND=0

I see this on Ubuntu 22.04.5 LTS but not Ubuntu 24.04 (both native Wayland) with a standard mouse scroll wheel.

Duplicate of this bug: 1923073

I can reproduce this (Ubuntu 22.04.4 LTS).

I didn't stumble across this bug originally (I was doing string search for "scrollwheel" rather than "scroll wheel"), so ended up opening dupe bug 1923073, but there's a mozregression attached there on that bug (in case it's at all useful) which supports the regressor being 1836886.

The bug is marked as tracked for firefox133 (nightly). However, the bug still isn't assigned.

:gcp, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(gpascutto)
Assignee: nobody → stransky

I wonder if that's related to Gtk3 version. An old Gtk3 version fails to work with more than one wl interface. We may need to enable the smooth scroll etc. on new Gtk3 only.

Can you check which gtk3 versions are used on 22.04 and 24.04?
Thanks.

Ubuntu 22.04.5 (live USB) is gtk 3.24.33.
Ubuntu 24.04 is gtk 3.24.41.

Just to add a data point, I cannot reproduce this on PureOS 10 which has gtk 3.24.27 (tested in both GNOME and KDE).

Will look at 22.04 then.

Flags: needinfo?(stransky)

I see that too. Just to be sure, please attach log of WAYLAND_DEBUG=1 MOZ_LOG="Widget:5".
Thanks.

Flags: needinfo?(stransky)
Flags: needinfo?(gpascutto)
Flags: needinfo?(arash)
Duplicate of this bug: 1923559
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/9ba4093d9b54 [Wayland] Listen for pointer events only if AXIS_VALUE120 is supported r=emilio
Status: NEW → RESOLVED
Closed: 23 days ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: