Bug 1922916 [Wayland] Listen for pointer events only if AXIS_VALUE120 is supported r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D224842